<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_overview"
        android:icon="@drawable/ic_overview"
        android:title="@string/nav_overview" />
    <item
        android:id="@+id/nav_apps"
        android:icon="@drawable/ic_apps"
        android:title="@string/nav_apps" />
    <item
        android:id="@+id/nav_threats"
        android:icon="@drawable/ic_threats"
        android:title="@string/nav_threats" />
    <item
        android:id="@+id/nav_activity"
        android:icon="@drawable/ic_activity"
        android:title="@string/nav_activity" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />
</menu>
